# C_practice

./: CMakeLists.txt  DividedBy2.c  FindPrime.c  FractionSlop.c  MultipleTable.c  NumOf9.c  ResolveQuadraticEquation.c  Reverse.c  reverse.c
