cmake_minimum_required(VERSION 3.15)
project(C C)

set(CMAKE_C_STANDARD 11)

add_executable(Reverse Reverse.c)
add_executable(FindPrime FindPrime.c)
add_executable(MultipleTable MultipleTable.c)
add_executable(ResolveQuadraticEquation ResolveQuadraticEquation.c)
add_executable(FractionSlop FractionSlop.c)
add_executable(NumOf9 NumOf9.c)